# sparkle

./: .gitignore  .test.sh  CHANGELOG.md  README.md  Taskfile.yml  devenv.nix  devenv.yaml  pyproject.toml
.github/workflows/: test.yml
exmaple/: app.py
src/sparkle/: __init__.py  core.py  data_reader.py  data_writer.py  handlers.py  models.py  reader.py  sources.py
src/sparkle/application/: __init__.py  spark.py
src/sparkle/config/: __init__.py  database_config.py  iceberg_config.py  kafka_config.py
src/sparkle/reader/: __init__.py  iceberg_reader.py  kafka_reader.py  schema_registry.py  table_reader.py
src/sparkle/utils/: logger.py  spark.py
src/sparkle/writer/: __init__.py  iceberg_writer.py  kafka_writer.py  table_path.py
tests/: conftest.py  docker-compose.yml
tests/unit/reader/: test_kafka_reader.py  test_schema_registry.py  test_table_reader.py
tests/unit/utils/: test_spark.py
tests/unit/writer/: test_iceberg_writer.py  test_kafka_batch_writer.py  test_kafka_stream_writer.py  test_kafka_writer.py
