[project]
name = "sparkle"
version = "0.0.0"
description = "✨ A meta framework for Apache Spark, helping data engineers to focus on solving business problems with highest quality!"
authors = [
    {name = "Reza (Shahin) Khanipour", email = "shahin@DataChef.co"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
path = "src/sparkle/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "Commitizen>=3.28.0",
    "mypy>=1.11.0",
    "pdbpp>=0.10.3",
    "pytest-coverage>=0.0",
    "pytest-dependency>=0.6.0",
    "pytest>=8.3.1",
]
[tool.commitizen]
version = "1.0.0"
update_changelog_on_bump = true
version_provider = "scm"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "src/sparkle/__init__.py"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "UP", # pyupgrade
  "D"   # pydocstyle
]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.coverage.run]
branch = true
relative_files = true
source = [
    "src/sparkle",
]

[tool.coverage.report]
skip_empty = true
