[tool.poetry]
name = "sparkle"
version = "0.0.0"
description = "✨ A meta framework for Apache Spark, helping data engineers to focus on solving business problems with highest quality!"
authors = [
  "Reza (Shahin) Khanipour <shahin@datachef.co>",
  "Farbod Ahmadian <farbod@datachef.co>"
]
readme = "README.md"
license = "Apache-2.0"
packages = [
  { include = "sparkle", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10.14, <4.0"
# FIXME we need to lock this for now, given the plugins we install are
# tightly coupled with the versions. Unless we require users to add
# these plugins on runtime, we can't change this.
pyspark = "3.3.2"
requests = "^2.32.3"
responses = "^0.25.3"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"
pdbpp = "^0.10.3"
mypy = "^1.11.0"
pytest-coverage = "^0.0"
pytest-dependency = "^0.6.0"
pytest = "^8.3.1"
pytest-mock = "^3.14.0"
confluent-kafka = "^2.5.3"
fastavro = "^1.9.7"
types-confluent-kafka = "^1.2.2"

[tool.commitizen]
version = "1.0.0"
update_changelog_on_bump = true
version_provider = "scm"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/sparkle/__init__.py"
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "UP", # pyupgrade
  "D"   # pydocstyle
]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.coverage.run]
branch = true
relative_files = true
source = [
    "src/sparkle",
]

[tool.coverage.report]
skip_empty = true

[tool.pytest.ini_options]
addopts = "-vv --tb=auto --disable-warnings"
pythonpath = [
  "src"
]
